--- a/IMHDA/homepage.html
+++ b/IMHDA/homepage.html
@@ -1,25 +1,191 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Diamond Art Mental Health</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>Community - Diamond Art</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Pacifico&display=swap" rel="stylesheet">
+  <style>
+    body {
+      background: #f7fafc;
+      margin: 0;
+      font-family: 'Montserrat', Arial, sans-serif;
+      min-height: 100vh;
+      position: relative;
+      overflow-x: hidden;
+      /* Subtle diamond background pattern */
+      background-image: url('https://www.transparenttextures.com/patterns/diamond-upholstery.png'), linear-gradient(135deg, #e0eafc 0%, #cfdef3 100%);
+      background-size: 120px 120px, cover;
+    }
+    nav {
+      background: rgba(44, 62, 80, 0.92);
+      padding: 1em 2em;
+      display: flex;
+      gap: 2em;
+      justify-content: center;
+      box-shadow: 0 3px 16px rgba(44, 62, 80, 0.15);
+      border-radius: 0 0 18px 18px;
+    }
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: bold;
+      letter-spacing: 1px;
+      transition: color 0.2s;
+      font-size: 1.15em;
+    }
+    nav a:hover {
+      color: #f9c8ff;
+      text-shadow: 0 0 6px #aee2ff;
+    }
+    main {
+      max-width: 750px;
+      margin: 3.5em auto;
+      background: rgba(255,255,255,0.93);
+      border-radius: 28px;
+      box-shadow: 0 6px 32px rgba(51,34,98,0.10);
+      padding: 3.5em 2.2em 2.5em 2.2em;
+      position: relative;
+      z-index: 1;
+      border: 4px solid #b6ccfa;
+      outline: 8px solid #f9c8ff;
+    }
+    h2 {
+      font-family: 'Pacifico', cursive;
+      font-size: 2.8em;
+      color: #5a7edc;
+      text-align: center;
+      margin-bottom: 0.2em;
+      text-shadow: 0 0 15px #b6ccfa, 0 0 7px #fff;
+      position: relative;
+      letter-spacing: 1.5px;
+    }
+    .sparkle {
+      display: inline-block;
+      vertical-align: middle;
+      width: 36px;
+      height: 36px;
+      background: url('https://upload.wikimedia.org/wikipedia/commons/7/7f/Diamond_icon.svg') center/contain no-repeat;
+      animation: sparkle 1.3s infinite alternate;
+      margin-left: 10px;
+      filter: drop-shadow(0 0 10px #b5e0fc) drop-shadow(0 0 18px #f9c8ff);
+    }
+    @keyframes sparkle {
+      0% { filter: brightness(1.1);}
+      100% { filter: brightness(2.2) drop-shadow(0 0 18px #b6e0fa);}
+    }
+    p {
+      font-size: 1.29em;
+      color: #4d4d4d;
+      text-align: center;
+      margin-bottom: 2.3em;
+      margin-top: 0.4em;
+    }
+    /* Animated floating pixel diamonds */
+    .pixel-diamond {
+      position: absolute;
+      width: 38px;
+      height: 38px;
+      z-index: 0;
+      opacity: 0.8;
+      animation: floatDiamonds 9s linear infinite;
+      background-size: cover;
+    }
+    .pixel-diamond.d1 { top: 70px; left: 7%; animation-delay: 0s; }
+    .pixel-diamond.d2 { top: 250px; right: 11%; animation-delay: 2s;}
+    .pixel-diamond.d3 { bottom: 70px; left: 24%; animation-delay: 3.5s;}
+    .pixel-diamond.d4 { bottom: 140px; right: 10%; animation-delay: 5s;}
+    .pixel-diamond.d5 { top: 20%; left: 80%; animation-delay: 7s;}
+    .pixel-diamond.d6 { bottom: 24%; right: 30%; animation-delay: 6s;}
+    @keyframes floatDiamonds {
+      0% { transform: translateY(0) scale(1);}
+      50% { transform: translateY(-30px) scale(1.07);}
+      100% { transform: translateY(0) scale(1);}
+    }
+    /* Gallery preview for artworks */
+    .art-gallery {
+      display: flex;
+      gap: 1.4em;
+      justify-content: center;
+      flex-wrap: wrap;
+      margin-top: 2.5em;
+      margin-bottom: 0.5em;
+    }
+    .artwork {
+      width: 118px;
+      height: 118px;
+      background: linear-gradient(135deg, #e0eafc 0%, #cfdef3 100%);
+      border-radius: 16px;
+      box-shadow: 0 2px 10px #b6ccfa99;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border: 2.5px solid #f9c8ff;
+      outline: 3.5px solid #b6ccfa;
+      position: relative;
+      overflow: hidden;
+    }
+    .artwork img {
+      width: 90px;
+      height: 90px;
+      object-fit: cover;
+      border-radius: 10px;
+      border: 1.5px solid #b6e0fa;
+      box-shadow: 0 0 7px #f9c8ff77;
+    }
+    .artwork-placeholder {
+      color: #b6ccfa;
+      font-size: 1.5em;
+      font-family: 'Montserrat', Arial, sans-serif;
+      text-align: center;
+    }
+    /* Responsive for mobile */
+    @media (max-width: 800px) {
+      main { padding: 1.3em 0.5em;}
+      h2 { font-size: 2em;}
+      .art-gallery { gap: 0.6em;}
+      .artwork { width: 90px; height: 90px;}
+      .artwork img { width: 66px; height: 66px;}
+    }
+  </style>
 </head>
 <body>
-  <header>
-    <<h1>💎 Diamond Art Mental Health 💎</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="login.html">Login</a>
-      <a href="community.html">Community</a>
-      <a href="help.html">Help</a>
-    </nav>
-  </header>
+  <!-- Animated pixel diamonds (feel free to swap with pixel-art diamonds or SVGs of your choice) -->
+  <div class="pixel-diamond d1" style="background-image: url('https://cdn.pixabay.com/photo/2014/04/03/11/54/diamond-312256_1280.png');"></div>
+  <div class="pixel-diamond d2" style="background-image: url('https://cdn.pixabay.com/photo/2016/04/01/09/25/diamond-1294294_1280.png');"></div>
+  <div class="pixel-diamond d3" style="background-image: url('https://cdn.pixabay.com/photo/2012/04/13/21/07/diamond-33613_1280.png');"></div>
+  <div class="pixel-diamond d4" style="background-image: url('https://cdn.pixabay.com/photo/2014/04/03/11/54/diamond-312256_1280.png');"></div>
+  <div class="pixel-diamond d5" style="background-image: url('https://cdn.pixabay.com/photo/2016/04/01/09/25/diamond-1294294_1280.png');"></div>
+  <div class="pixel-diamond d6" style="background-image: url('https://cdn.pixabay.com/photo/2012/04/13/21/07/diamond-33613_1280.png');"></div>
+
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="login.html">Login</a>
+    <a href="community.html">Community</a>
+    <a href="help.html">Help</a>
+  </nav>
   <main>
-    <h2>Welcome!</h2>
-    <p>This platform helps you express yourself with diamond art while supporting your mental wellness journey.</p>
-    <img src="diamond_art_image.jpg.png" alt="Diamond Art" class="main-img" />
+    <h2>
+      Community Forum
+      <span class="sparkle"></span>
+    </h2>
+    <p>
+      Connect with fellow diamond artists, share your sparkling creations, exchange tips, and celebrate creativity!
+    </p>
+
+    <div class="art-gallery">
+      <div class="artwork">
+        <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=200&q=80" alt="Diamond Art 1">
+      </div>
+      <div class="artwork">
+        <img src="https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=200&q=80" alt="Diamond Art 2">
+      </div>
+      <div class="artwork">
+        <div class="artwork-placeholder">Your<br>Art Here!</div>
+      </div>
+    </div>
+    <p style="text-align:center; color:#a18cd1; font-size:1em; margin-top:0.5em;">
+      Want your art featured? <a href="login.html" style="color:#5a7edc;text-decoration:underline;">Join &amp; upload!</a>
+    </p>
   </main>
 </body>
 </html>
