--- a/IMHDA/log-in.html
+++ b/IMHDA/log-in.html
@@ -1,25 +1,34 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <title>Login - Diamond Art</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="diamond-login.css" />
+  <!-- Add Google Fonts for pretty, playful text -->
+  <link href="https://fonts.googleapis.com/css?family=Pacifico|Quicksand:400,600&display=swap" rel="stylesheet">
 </head>
 <body>
   <nav>
     <a href="index.html">Home</a>
-    <a href="login.html">Login</a>
+    <a href="login.html" class="active">Login</a>
     <a href="community.html">Community</a>
     <a href="help.html">Help</a>
   </nav>
   <main>
-    <h2>Login</h2>
-    <form method="POST" action="/login">
-      <label>Email:</label>
+    <div class="diamond-header">
+      <svg width="54" height="54" viewBox="0 0 48 48">
+        <polygon points="24,4 44,18 36,44 12,44 4,18" fill="#ffe0f7" stroke="#e38ec9" stroke-width="2"/>
+        <polygon points="24,10 40,20 33,40 15,40 8,20" fill="#ffd6f5" stroke="#e38ec9" stroke-width="1"/>
+      </svg>
+      <h2>Login</h2>
+      <p>Shine bright like a diamond!</p>
+    </div>
+    <form method="POST" action="/login" class="diamond-form">
+      <label>Email</label>
       <input type="email" name="email" required />
-      <label>Password:</label>
+      <label>Password</label>
       <input type="password" name="password" required />
-      <input type="submit" value="Login" />
+      <button type="submit" class="diamond-btn">Login</button>
     </form>
   </main>
 </body>
