--- a/IMHDA/profile.html
+++ b/IMHDA/profile.html
@@ -48,8 +48,8 @@
     <!-- Profile picture -->
     <img src="diamond_art_image.jpg.png"Profile Picture" class="profile-pic">
 
-    <p><strong>Name:</strong> Jane Doe</p>
-    <p><strong>Email:</strong> jane@example.com</p>
+    <p><strong>Name:</strong> Diana Arias</p>
+    <p><strong>Email:</strong> DianaA@example.com</p>
     <p><strong>Member Since:</strong> March 2024</p>
     <p><strong>Favorite Mood Color:</strong> Lavender</p>
 
